--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -32,6 +32,7 @@
 
                 <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or (K)Black. The front, back, right and left faces and the middle part on top of the cube are all interactable.</p>
                 <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors. To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below.</p>
+                <p>NOTE: You cannot cycle after starting movemen.</p>
 
                 <table>
                   <tr><th>First Color in the Sequence</th><th>When to press the cube</th></tr>
@@ -59,7 +60,7 @@
               </table>
                 
                 <p>Next, find the three target positions you should submit. Take the serial number and split it into 3 pairs of 2. In each pair, convert any letters into their alphabetic positions (A = 1, B = 2...Z = 26), and replace any 0s with 1s. The first number will be used as the row, counting from the top to bottom on the rows on the left, and the second number will be used as the column, counting from left to right on the columns on the top.</p>
-                <p>Use the faces of the cube to move along the grid: the left and right faces move you left and right, the back face moves you up, and the front face moves you down. The grid does <b>not</b> wrap around. Move to the target positions in any order <b>avoiding the cells labeled with the second color of the sequence (if you start on such a cell, the module will not strike you, and if such a cell is one of the target positions, you may move to it without striking.)</b> and press the middle part when the last digit is NOT the number you got from the previous time table. This will submit your current position.</p>
+                <p>Use the faces of the cube to move along the grid: the left and right faces move you left and right, the back face moves you up, and the front face moves you down. The grid does <b>not</b> wrap around. Move to the target positions in any order <b>avoiding the cells labeled with the second color of the sequence (if you start on such a cell, the module will not strike you, and if such a cell is one of the target positions, you may move to it without striking.)</b> and press the middle part of the cube. This will submit your current position.</p>
                 <p>A strike will occur whenever you submit a wrong position. Once you submit all three of the target positions, the module will solve.</p>
 
             </div>
