--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -30,9 +30,9 @@
                 <h2>On the Subject of Colored Cube</h2>
                 <p class="flavour-text">It grew up.</p>
 
-                <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or (K)Black. The front, back, right and left faces and the middle part on top of the cube are all interactable.</p>
-                <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors. To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below.</p>
-                <p>NOTE: You cannot cycle after starting movement.</p>
+                <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or Blac(K). The faces of the cube are all interactable.</p>
+                <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors. To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below. <br> NOTE: You cannot cycle after starting movement.</p>
+                
 
                 <table>
                   <tr><th>First Color in the Sequence</th><th>When to press the cube</th></tr>
