--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -30,8 +30,13 @@
                 <h2>On the Subject of Colored Cube</h2>
                 <p class="flavour-text">It grew up.</p>
 
-                <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or Blac(K). The faces of the cube are all interactable.</p>
-                <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors. To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below. <br> NOTE: You cannot cycle after starting movement.</p>
+                <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or Blac(K).
+                    The faces of the cube are all interactable.
+                    The front and back faces are the top and bottom faces when looking at the module directly.
+                    In case you get lost, there is a reset button (which appears invisible, but is highlightable) in top left corner of the module, which resets your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.</p>
+                <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors.
+                    To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below.
+                    <br> NOTE: You cannot cycle after starting movement.</p>
                 
                 <table>
                   <tr><th>First Color in the Sequence</th><th>When to press the cube</th></tr>
@@ -45,7 +50,9 @@
                 </table>
                 <p class="centered"># - Serial Number</p>
 
-                <p>In the below grid, find your starting position. On the rows on the left, find the second color of the sequence, this is the row of your starting position. Repeat the same process on the columns on the top, using the third color of the sequence.</p>
+                <p>In the below grid, find your starting position.
+                    On the rows on the left, find the second color of the sequence, this is the row of your starting position.
+                    Repeat the same process on the columns on the top, using the third color of the sequence.</p>
 
                 <table>
                   <tr><th class="corner"></th><th>R</th><th>G</th><th>B</th><th>Y</th><th>M</th><th>W</th><th>K</th></tr>
@@ -71,10 +78,13 @@
                 <p>Next, find the three target positions you should submit.
                     Take the serial number and split it into 3 pairs. In each pair, convert any letters into their alphabetic positions (A = 1, B = 2...Z = 26), and replace any 0s with 1s, then subtract 7 from each value unitl they are in the range 1 to 7.
                     The first number will be used as the row, counting from the top to bottom on the rows on the left, and the second number will be used as the column, counting from left to right on the columns on the top.</p>
-                <p>Use the faces of the cube to move along the grid: the left and right faces move you left and right, the back face moves you up, and the front face moves you down. The grid does <b>not</b> wrap around.
+                <p>Use the faces of the cube to move along the grid: the left and right faces move you left and right, the back face moves you up, and the front face moves you down.
+                    The grid does <b>not</b> wrap around.
                     Move to the target positions in any order <b>avoiding the cells labeled with the second color of the sequence (if you start on such a cell, the module will not strike you, and if such a cell is one of the target positions, you may move to it without striking)</b> and press the middle part of the cube.
-                    This will submit your current position. If you have a duplicate target position, submit it multiple times.</p>
-                <p>A strike will occur whenever you submit a wrong position. Once you submit all three of the target positions, the module will solve.</p>
+                    This will submit your current position.
+                    If you have a duplicate target position, submit it multiple times.</p>
+                <p>A strike will occur whenever you submit a wrong position.
+                    Once you submit all three of the target positions, the module will solve.</p>
   
             </div>
             <div class="page-footer relative-footer">2</div>
