--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -31,8 +31,7 @@
                 <p class="flavour-text">It grew up.</p>
 
                 <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or Blac(K).
-                    The faces of the cube are all interactable.
-                    In case you get lost, there is a reset button (which appears invisible, but is highlightable) in top left corner of the module, which resets your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.</p>
+                    The faces of the cube are all interactable</p>
                 <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors.
                     To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below.
                     <br> NOTE: You cannot cycle after starting movement.</p>
@@ -84,6 +83,9 @@
                     If you have a duplicate target position, submit it multiple times.</p>
                 <p>A strike will occur whenever you submit a wrong position.
                     Once you submit all three of the target positions, the module will solve.</p>
+                <img src="img/Component/Cube Diagram.svg" class="centered-img" style="width: 40%; height: 40%; background-color: white;">
+                <p>In case you get lost, there is a reset button (which appears invisible, but is highlightable) in top left corner of the module, which resets your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.</p></p>
+                <p>In this diagram, "R" indicates the reset button.</p>
   
             </div>
             <div class="page-footer relative-footer">2</div>
