--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -84,7 +84,7 @@
                 <p>A strike will occur whenever you submit a wrong position.
                     Once you submit all three of the target positions, the module will solve.</p>
                 <img src="img/Component/Cube Diagram.svg" class="centered-img" style="width: 40%; height: 40%; background-color: white;">
-                <p>In case you get lost, there is a reset button (which appears invisible, but is highlightable) in top left corner of the module, which resets your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.</p></p>
+                <p>In case you get lost, there is a reset button (which appears invisible, but is highlightable) in top left corner of the module, which resets your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.</p>
                 <p>In this diagram, "R" indicates the reset button.</p>
   
             </div>
