--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -14,6 +14,15 @@
             border: none;
         }
         td, th { padding: .3em .6em 0; }
+        th { border-radius: 50%; }
+
+        .red { background-color: red; color: black; }
+        .green { background-color: lime; color: black; }
+        .blue { background-color: blue; color: white; }
+        .yellow { background-color: yellow; color: black; }
+        .magenta { background-color: magenta; color: black; }
+        .white { background-color: white; color: black; }
+        .black { background-color: black; color: white; }
 
         .page-footer::before { content: 'Page '; }
         .page-footer::after { content: ' of 2'; }
@@ -31,39 +40,45 @@
                 <h2>On the Subject of Colored Cube</h2>
                 <p class="flavour-text">the cube!!1!1!11!111111</p>
 
-                <p>This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or Blac(K).
-                    The faces of the cube are all interactable</p>
-                <p>The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors.
-                    To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below.
-                    <br> NOTE: You cannot cycle after starting movement.</p>
-                
+                <p>
+                    This module contains a Colored Cube, which can be either (R)ed, (G)reen, (B)lue, (Y)ellow, (M)agenta, (W)hite or Blac(K).
+                    The faces of the cube are all interactable
+                </p>
+                <p>
+                    The cube will start at the 1st position of the generated sequence (indicated by the number in Top left of the cube), which contains 3 colors.
+                    To cycle the cube through the sequence, press the middle part when the last digit of the timer is the number you get from the table below.<br>
+                    NOTE: You cannot cycle after starting movement.
+                </p>
+
                 <table>
-                  <tr><th>First Color in the Sequence</th><th>When to press the cube</th></tr>
-                  <tr><td>Red</td><td>(Number of letters in # + 8) % 10</td></tr>
-                  <tr><td>Green</td><td>(Number of digits in # + 3) % 10</td></tr>
-                  <tr><td>Blue</td><td>(Unlit Indicators + 1) % 10</td></tr>
-                  <tr><td>Yellow</td><td>(Batteries + 5) % 10</td></tr>
-                  <tr><td>Magenta</td><td>(Ports + 9) % 10</td></tr>
-                  <tr><td>White</td><td>(Lit Indicators + 4) % 10</td></tr>
-                  <tr><td>Black</td><td>(Last digit in # + 7) % 10</td></tr>
+                    <tr><th>First Color in the Sequence</th><th>When to press the cube</th></tr>
+                    <tr><td class="red">Red</td><td>(Number of letters in # + 8) % 10</td></tr>
+                    <tr><td class="green">Green</td><td>(Number of digits in # + 3) % 10</td></tr>
+                    <tr><td class="blue">Blue</td><td>(Unlit Indicators + 1) % 10</td></tr>
+                    <tr><td class="yellow">Yellow</td><td>(Batteries + 5) % 10</td></tr>
+                    <tr><td class="magenta">Magenta</td><td>(Ports + 9) % 10</td></tr>
+                    <tr><td class="white">White</td><td>(Lit Indicators + 4) % 10</td></tr>
+                    <tr><td class="black">Black</td><td>(Last digit in # + 7) % 10</td></tr>
                 </table>
                 <p class="centered"># - Serial Number</p>
 
-                <p>In the below grid, find your starting position.
+                <p>
+                    In the below grid, find your starting position.
                     On the rows on the left, find the second color of the sequence, this is the row of your starting position.
-                    Repeat the same process on the columns on the top, using the third color of the sequence.</p>
+                    Repeat the same process on the columns on the top, using the third color of the sequence.
+                </p>
 
                 <table>
-                  <tr><th class="corner"></th><th>R</th><th>G</th><th>B</th><th>Y</th><th>M</th><th>W</th><th>K</th></tr>
-                  <tr><th>R</th><td>R</td><td>M</td><td>B</td><td>W</td><td>G</td><td>K</td><td>Y</td></tr>
-                  <tr><th>G</th><td>W</td><td>K</td><td>R</td><td>G</td><td>Y</td><td>B</td><td>M</td></tr>
-                  <tr><th>B</th><td>K</td><td>B</td><td>Y</td><td>M</td><td>R</td><td>W</td><td>G</td></tr>
-                  <tr><th>Y</th><td>G</td><td>Y</td><td>M</td><td>B</td><td>K</td><td>R</td><td>W</td></tr>
-                  <tr><th>M</th><td>M</td><td>R</td><td>K</td><td>Y</td><td>W</td><td>G</td><td>B</td></tr>
-                  <tr><th>W</th><td>Y</td><td>W</td><td>G</td><td>R</td><td>B</td><td>M</td><td>K</td></tr>
-                  <tr><th>K</th><td>B</td><td>G</td><td>W</td><td>K</td><td>M</td><td>Y</td><td>R</td></tr>
-              </table>
-            
+                    <tr><th class="corner"></th><th class="red">R</th><th class="green">G</th><th class="blue">B</th><th class="yellow">Y</th><th class="magenta">M</th><th class="white">W</th><th class="black">K</th></tr>
+                    <tr><th class="red">R</th><td class="red">R</td><td class="magenta">M</td><td class="blue">B</td><td class="white">W</td><td class="green">G</td><td class="black">K</td><td class="yellow">Y</td></tr>
+                    <tr><th class="green">G</th><td class="white">W</td><td class="black">K</td><td class="red">R</td><td class="green">G</td><td class="yellow">Y</td><td class="blue">B</td><td class="magenta">M</td></tr>
+                    <tr><th class="blue">B</th><td class="black">K</td><td class="blue">B</td><td class="yellow">Y</td><td class="magenta">M</td><td class="red">R</td><td class="white">W</td><td class="green">G</td></tr>
+                    <tr><th class="yellow">Y</th><td class="green">G</td><td class="yellow">Y</td><td class="magenta">M</td><td class="blue">B</td><td class="black">K</td><td class="red">R</td><td class="white">W</td></tr>
+                    <tr><th class="magenta">M</th><td class="magenta">M</td><td class="red">R</td><td class="black">K</td><td class="yellow">Y</td><td class="white">W</td><td class="green">G</td><td class="blue">B</td></tr>
+                    <tr><th class="white">W</th><td class="yellow">Y</td><td class="white">W</td><td class="green">G</td><td class="red">R</td><td class="blue">B</td><td class="magenta">M</td><td class="black">K</td></tr>
+                    <tr><th class="black">K</th><td class="blue">B</td><td class="green">G</td><td class="white">W</td><td class="black">K</td><td class="magenta">M</td><td class="yellow">Y</td><td class="red">R</td></tr>
+                </table>
+
             </div>
             <div class="page-footer relative-footer">1</div>
         </div>
@@ -74,31 +89,45 @@
             </div>
             <div class="page-content">
 
-                <p>Next, find the three target positions you should submit.
-                    Take the serial number and split it into 3 pairs. In each pair, convert any letters into their alphabetic positions (A = 1, B = 2...Z = 26), and replace any 0s with 1s, then subtract 7 from each value unitl they are in the range 1 to 7.
-                    The first number will be used as the row, counting from the top to bottom on the rows on the left, and the second number will be used as the column, counting from left to right on the columns on the top.</p>
-                <p>Use the faces of the cube to move along the grid: the left and right faces move you left and right, the back face moves you up, and the front face moves you down.
+                <p>
+                    Next, find the three target positions you should submit.
+                    Take the serial number and split it into 3 pairs.
+                    In each pair, replace any 0s with 1s, and convert any letters into their alphabetic positions (A = 1, B = 2...Z = 26),
+                    then subtract 7 from each value unitl they are in the range 1 to 7.
+                    The first number will be used as the row, counting from the top to bottom on the rows on the left,
+                    and the second number will be used as the column, counting from left to right on the columns on the top.
+                </p>
+                <p>
+                    Use the faces of the cube to move along the grid: the left and right faces move you left and right, the back face moves you up, and the front face moves you down.
                     The grid does <b>not</b> wrap around.
-                    Move to the target positions in any order <b>avoiding the cells labeled with the second color of the sequence (if you start on such a cell, the module will not strike you, and if such a cell is one of the target positions, you may move to it without striking)</b> and press the middle part of the cube.
+                    Move to the target positions in any order
+                    <strong>
+                        avoiding the cells labeled with the second color of the sequence (if you start on such a cell, the module will not strike you,
+                        and if such a cell is one of the target positions, you may move to it without striking)
+                    </strong>
+                    and press the middle part of the top face of the cube.
                     This will submit your current position.
-                    If you have a duplicate target position, submit it multiple times.</p>
-                <p>A strike will occur whenever you submit a wrong position.
-                    Once you submit all three of the target positions, the module will solve.</p>
+                    If you have a duplicate target position, submit it multiple times.
+                </p>
+                <p>
+                    A strike will occur whenever you submit a wrong position.
+                    Once you submit all three of the target positions, the module will solve.
+                </p>
                 <svg class="centered-img" style="width:40%" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 348 348" font-weight="bold" font-size="30" text-anchor="middle">
                     <path fill="#FFF" stroke="none" d="M0 0h348v348h-348z"/>
                     <path stroke="#000" stroke-width="2" d="M5.08 5.78h336.91v337.67H5.08z"/>
                     <circle cx="298.29" cy="40.55" stroke="#000" stroke-width="2" r="15.9"/>
                     <path d="M111.238 101.082h132.224v132.224H111.238z" fill="#000" stroke="#000" stroke-width=".779463"/>
-                    <path d="M20.58 21.168h41.159v41.159H20.58z" fill="none" stroke="#000"/>
-                    <text x="41" y="55" fill="#000" font-size="40">R</text>
                     <text x="177" y="95" fill="#000">BACK</text>
                     <text x="290" y="175" fill="#000">RIGHT</text>
                     <text x="177" y="260" fill="#000">FRONT</text>
                     <text x="68" y="175" fill="#000">LEFT</text>
                 </svg>
-                <p>In case you get lost, there is a reset button (which appears invisible, but is highlightable) in top left corner of the module, which resets your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.</p>
-                <p>In this diagram, “R” indicates the reset button.</p>
-  
+                <p>
+                    In case you get lost, hold the middle part of the top face of the cube for 2 or more seconds (indicated by a unique sound), and then release it.
+                    This will reset your current position in the grid, your current position in the color sequence, and the target positions that you have to submit.
+                </p>
+
             </div>
             <div class="page-footer relative-footer">2</div>
         </div>
