--- a/Manual/HTML/Colored Cube.html
+++ b/Manual/HTML/Colored Cube.html
@@ -70,13 +70,13 @@
 
                 <table>
                     <tr><th class="corner"></th><th class="red">R</th><th class="green">G</th><th class="blue">B</th><th class="yellow">Y</th><th class="magenta">M</th><th class="white">W</th><th class="black">K</th></tr>
-                    <tr><th class="red">R</th><td class="red">R</td><td class="magenta">M</td><td class="blue">B</td><td class="white">W</td><td class="green">G</td><td class="black">K</td><td class="yellow">Y</td></tr>
-                    <tr><th class="green">G</th><td class="white">W</td><td class="black">K</td><td class="red">R</td><td class="green">G</td><td class="yellow">Y</td><td class="blue">B</td><td class="magenta">M</td></tr>
-                    <tr><th class="blue">B</th><td class="black">K</td><td class="blue">B</td><td class="yellow">Y</td><td class="magenta">M</td><td class="red">R</td><td class="white">W</td><td class="green">G</td></tr>
-                    <tr><th class="yellow">Y</th><td class="green">G</td><td class="yellow">Y</td><td class="magenta">M</td><td class="blue">B</td><td class="black">K</td><td class="red">R</td><td class="white">W</td></tr>
-                    <tr><th class="magenta">M</th><td class="magenta">M</td><td class="red">R</td><td class="black">K</td><td class="yellow">Y</td><td class="white">W</td><td class="green">G</td><td class="blue">B</td></tr>
-                    <tr><th class="white">W</th><td class="yellow">Y</td><td class="white">W</td><td class="green">G</td><td class="red">R</td><td class="blue">B</td><td class="magenta">M</td><td class="black">K</td></tr>
-                    <tr><th class="black">K</th><td class="blue">B</td><td class="green">G</td><td class="white">W</td><td class="black">K</td><td class="magenta">M</td><td class="yellow">Y</td><td class="red">R</td></tr>
+                    <tr><th class="red">R</th><td>R</td><td>M</td><td>B</td><td>W</td><td>G</td><td>K</td><td>Y</td></tr>
+                    <tr><th class="green">G</th><td>W</td><td>K</td><td>R</td><td>G</td><td>Y</td><td>B</td><td>M</td></tr>
+                    <tr><th class="blue">B</th><td>K</td><td>B</td><td>Y</td><td>M</td><td>R</td><td>W</td><td>G</td></tr>
+                    <tr><th class="yellow">Y</th><td>G</td><td>Y</td><td>M</td><td>B</td><td>K</td><td>R</td><td>W</td></tr>
+                    <tr><th class="magenta">M</th><td>M</td><td>R</td><td>K</td><td>Y</td><td>W</td><td>G</td><td>B</td></tr>
+                    <tr><th class="white">W</th><td>Y</td><td>W</td><td>G</td><td>R</td><td>B</td><td>M</td><td>K</td></tr>
+                    <tr><th class="black">K</th><td>B</td><td>G</td><td>W</td><td>K</td><td>M</td><td>Y</td><td>R</td></tr>
                 </table>
 
             </div>
